<resources>
    <string name="app_name">PerfilEstudiante</string>

    <string name="label_name">Nombre</string>
    <string name="hint_name">Ej. Juan Pérez</string>

    <string name="label_matricula">Matrícula</string>
    <string name="hint_matricula">Ej. 2024-00123</string>

    <string name="label_carrera">Carrera</string>

    <string-array name="carreras_array">
        <item>Selecciona tu carrera</item>
        <item>Ingeniería en Ciencias de la Computación</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería Industrial</item>
        <item>Administración de Empresas</item>
        <item>Contabilidad</item>
    </string-array>

    <string name="btn_save">Guardar</string>

    <string name="error_name">El nombre es obligatorio</string>
    <string name="error_matricula">La matrícula es obligatoria</string>
    <string name="error_carrera">La carrera es obligatoria</string>

    <string name="resumen_titulo">Aquí está tu información:</string>
    <string name="saludo_formato">¡Hola, %1$s!</string>
    <string name="resumen_formato">Nombre: %1$s\nMatrícula: %2$s\nCarrera: %3$s</string>
    <string name="btn_editar">Editar</string>

    <string name="toast_guardado">Perfil guardado correctamente</string>

</resources>